--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Telegram Web App</title>
+    <title>Telegram Web App1</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -38,7 +38,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Telegram Web App Data</h1>
+        <h1>Telegram Web App Data2</h1>
         <pre id="data-output"></pre>
     </div>
 
